k8s/appgw/aks-poc-ingress-appgw.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aks-poc-ingress-appgw
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: aks-poc-service-app-appgw
            servicePort: 80
